[metadata]
name = sailreval
version = attr: sailreval.__version__
url = https://github.com/mahaloz/sailr-eval
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
license = BSD 2 Clause
license_files = LICENSE
description = The SAILR Evaluation Pipeline
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    networkx
    graphviz
    pygraphviz
    toml
    psutil
    tqdm
    cpgqls-client
    docker
    matplotlib
    numpy
    pandas
    scipy
    seaborn
    pyelftools

python_requires = >= 3.6
packages = find:
include_package_data = True

[options.package_data]
* = joern/bin/*

