[metadata]
name = sailreval
version = attr: sailreval.__version__
url = https://github.com/mahaloz/sailr-eval
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
license = BSD 2 Clause
license_files = LICENSE
description = The SAILR Evaluation Pipeline
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    networkx
    toml
    tqdm
    pyelftools
    cfgutils>=1.8.1
    pyjoern==1.2.18.6
python_requires = >= 3.8
packages = find:
include_package_data = True

[options.extras_require]
viz =
    matplotlib
    numpy
    pandas
    seaborn

